src/unit_tests/CustSemantics/fail/rep-meths.cl
class Main inherits IO {
    main(): Int {1};
    main(): Int {1};
};